# MyRover_Gazebo

./: CMakeLists.txt  README.md  Rover_Jonathan_Fisher.urdf  ci_status.md
config/ur10e/: visual_parameters.yaml
config/ur16e/: visual_parameters.yaml
config/ur20/: visual_parameters.yaml
data/: tf2_frames.gv
data/rosbag_plot_floor/: metadata.yaml  rosbag_plot_floor1_0.db3
data/rosbag_plot_sand/: metadata.yaml  rosbag_plot_sand_0.db3
launch/: view_ur.launch.py
meshes/dae/: Cube.dae  Sphere.dae  Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.007.dae
robot_description/: CMakeLists.txt  README.md  package.xml
robot_description/config/: rover_controller.yaml
robot_description/config/ur10/: visual_parameters.yaml
robot_description/config/ur30/: visual_parameters.yaml
robot_description/config/ur5/: visual_parameters.yaml
robot_description/config/ur5e/: visual_parameters.yaml
robot_description/include/: speed_controller.hpp
robot_description/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py  view_ur.launch.py
robot_description/meshes/dae/: Cube.016.dae  Torus.000.dae  Torus.006.dae  Torus.008.dae
robot_description/src/: speed_controller.cpp
robot_description/urdf/: Rover_Jonathan_Fisher.urdf  base_rover.urdf.xacro  ros2_control.urdf.xacro  roverA.urdf  roverB.urdf
rover_pkg/: CMakeLists.txt  package.xml
rover_pkg/launch/: rover_launch.py
rover_pkg/urdf/: Rover.urdf
urdf/: Rover_Jonathan_Fisher.urdf  ros2_control_mock_hardware.xacro  ur_macro.xacro
